# dophon

./: .gitignore  README.md  pyproject.toml  setup.py
demo/: Bootstrap.py  BootstrapClusters.py  BootstrapDecoration.py  Dockerfile  RunAsDocker.py  application.py  banner.txt  footer.txt  ip_count  module.xml  pre_requirements.txt  requirements.txt
demo/controller/: controller.py
demo/mappers/: demo_mapper.xml
demo/routes/: DemoRoutes.py
demo/templates/: index.html
dophon/: Bootstrap.py  __init__.py  boot.py  cluster_boot.py  docker_boot.py  pre_boot.py  setup.py
dophon/annotation/: AutoWired.py  __init__.py  application.py  side_pkg.py
dophon/def_prop/: __init__.py  default_properties.py
dophon/logger/: __init__.py
dophon/module_struct/: __init__.py
dophon/msg_queue/: Consumer.py  MsgCenter.py  Producer.py  SizeableTPE.py  __init__.py  bone_data.py  test.py  test2.py  test_msg_tunnel.py  test_msg_tunnel1.py  test_remote_center.py  test_socket.py  test_socket_client.py  utils.py
dophon/mysql/: Connection.py  PageHelper.py  Pool.py  __init__.py
dophon/orm/: __init__.py  query_structor.py
dophon/properties/: IOCProp.py  __init__.py  properties_handler.py
dophon_db/: setup.py
test/: Dockerfile  applications.py  b_config.py  test_server.py
test3/: Dockerfile  __init__.py  application.py  docker_boot.py
test_class_decerator/: __init__.py  application.py
test_deceration_description/: Bootstrap.py  DockerBoot.py  Dockerfile  __init__.py  application.py
test_default_application/: application.py
test_pip/: __init__.py  module.xml
test_pip_async/: __init__.py  bootstrap.py  test_import.py
test_remote_config/: Dockerfile  application.py  test_server.py
test_torando/: Bootstrap.py  __init__.py
test_uni_entity/: __init__.py  application.py
(+59 files in other folders)
