[tool.poetry]
name = "dophon"
version = "1.2.15r3"
description = "dophon web framework like springboot"
authors = ["CallMeE <ealohu@163.com>"]
url="https://github.com/Ca11MeE/dophon"
license='Apache 2.0'
keywords = ['web', 'framework', 'dophon']

[tool.poetry.dependencies]
python = "^3.6"
dophon-manager = "*"
flask="*"
#tornado="*"
#PyMySQL='*'
urllib3="*"
#Flask_Bootstrap="*"
#gevent="*"
schedule="*"
#filetype = "^1.0"
#pyyaml = "^3.13"
dophon-logger="*"
#dophon-properties="*"

[tool.poetry.dev-dependencies]
pytest = "^3.6"
dophon-manager = "*"
flask="*"
#PyMySQL='*'
urllib3="*"
#Flask_Bootstrap="*"
#gevent="*"
schedule="*"
dophon-logger="*"
