[tool.poetry]
name = "dophon"
version = "1.3.0r4"
description = "dophon web framework like springboot"
authors = ["CallMeE <ealohu@163.com>"]
url="https://github.com/Ca11MeE/dophon"
license='Apache 2.0'
keywords = ['web', 'framework', 'dophon']

[tool.poetry.dependencies]
python = "^3.6"
dophon-manager = "*"
flask="*"
tqdm="*"
tornado="*"
urllib3="*"
dophon-logger="*"
dophon-properties="*"

[tool.poetry.dev-dependencies]
pytest = "^3.6"
